Сделал систему авторизации, и роутинга закрытах разделов.

--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -2,16 +2,17 @@
   <md-progress-linear md-mode="indeterminate" value="30" ng-show="ctrl.showProgress"></md-progress-linear>
   <div class="navbar">
     <div layout="row">
-      <div flex="20">
+      <div flex="5">
         <md-button class="md-fab md-mini md-raised" style="text-transform: none;" ng-click="ctrl.toggleMenu('menu')">
           <md-icon md-svg-src="img/icons/menu.svg" class="s24" aria-label="Cake"></md-icon>
         </md-button>
       </div>
-      <div flex="70">
+      <div flex="85">
+        <h3>Привет, {{::ctrl.userName|| 'путник'}}</h3>
       </div>
       <div flex="10">
-        <md-button class="md-raised" style="text-transform: none;" ng-show="!ctrl.isUser" ng-click="ctrl.logIn()">Войти</md-button>
-        <md-button class="md-raised" style="text-transform: none;" ng-show="ctrl.isUser" ng-click="ctrl.logIn()">Выйти</md-button>
+        <md-button class="md-raised" style="text-transform: none;" ng-show="!ctrl.isUser" ng-click="ctrl.login()">Войти</md-button>
+        <md-button class="md-raised" style="text-transform: none;" ng-show="ctrl.isUser" ng-click="ctrl.logout()">Выйти</md-button>
       </div>
     </div>
   </div>
@@ -21,9 +22,6 @@
     <md-toolbar class="md-theme-light">
       <h1 class="md-toolbar-tools">Menu</h1>
     </md-toolbar>
-    <md-content ng-controller="LeftMenuCtrl" layout-padding>
-
-
-    </md-content>
+    <md-content ng-controller="LeftMenuCtrl" layout-padding></md-content>
   </md-sidenav>
 </div>
