--- a/src/app/components/login/login.html
+++ b/src/app/components/login/login.html
@@ -1,3 +1,3 @@
-<div class="LoginController">
-  <p>Для того чтобы залогиниться необходима нажать кнопку войти в верхенем правом меню</p>
+<div class="width" class="LoginController">
+  <p class="login-text">Для того чтобы залогиниться необходима нажать кнопку войти в верхенем правом меню</p>
 </div>
